--- a/styles.css
+++ b/styles.css
@@ -77,10 +77,10 @@ ul li a{
     align-items: center;
 }
 main .overview-hero p{
-    width: 95%;
+    width: 90%;
 }
 main .overview-hero h2{
-    font-size: 33px;
+    font-size: 27px;
     font-weight: 500;
     margin-bottom: 20px;
     margin-top: -10px;
@@ -91,8 +91,74 @@ main .overview-hero div{
     padding-left: 35px;
 }
 .overview-hero-image img{
-    width: 25%;
-    height: 25%;
+    width: 190px;
     float: left;
     margin-right: 50px;
+}
+
+
+
+.learn-about{
+    height: 80vh;
+    margin-bottom: 20px;
+}
+
+
+
+.learn-about .container .cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.card:nth-of-type(1){
+    /* padding: 10px; */
+    padding-top: 50px;
+    border: 1px solid var(--hero-bg-color);
+    box-shadow: 0 2px 6px 0px rgba(107,114,128,0.9);
+    border-radius:5px ;
+    height: 440px;
+    
+}
+.card:nth-of-type(2){
+    /* padding: 5px; */
+    padding-top: 20px;
+    border: 1px solid var(--hero-bg-color);
+    box-shadow: 0 2px 6px 0px rgba(107,114,128,0.9);
+    border-radius:5px;
+    height: 440px;
+}
+
+.card:nth-of-type(3){
+    gap: 34px;
+    /* padding: 5px; */
+    padding-top: 20px;
+    border: 1px solid var(--hero-bg-color);
+    box-shadow: 0 2px 6px 0px rgba(107,114,128,0.9);
+    border-radius:5px ;
+    height: 440px;
+}
+
+.card:nth-child(1) img{
+    width: 300px;
+    margin-bottom: 48px;
+}
+.card:nth-child(2) img{
+    width: 300px;
+}
+.card:nth-child(3) img{
+    margin-bottom: 7px;
+    width: 300px;
+}
+.learn-about h2{
+    font-size: 24px;
+    padding: 20px 0;
+    color: var(--heading-color);
+}
+
+.card-body h3{
+    color: var(--heading-color);
+}
+.cards .card .card-body {
+    padding: 20px;
 }
