--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     --hero-bg-color: #e2e8f0;
     --heading-color: #48bb78;
     --bg-color: #48BB78;
+    --testing-bg: #4A5568;
     --default-font: -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
     Arial, "Noto Sans", sans-serif;
@@ -161,4 +162,45 @@ main .overview-hero div{
 }
 .cards .card .card-body {
     padding: 20px;
+}
+
+
+.testing {
+    background-color: var(--testing-bg) ;
+    height: 50vh;
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 100px;
+}
+
+.testing .container{
+    display: flex;
+    color: white;
+}
+
+.testing .container h2{
+    margin-bottom: 20px;
+}
+.testing .container p{
+    width: 74%;
+}
+
+.cta a{
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+}
+.cta{
+    position: relative;
+    right: 100px;
+    top: 40px;
+    background-color: var(--bg-color);
+    border-radius: 5px;
+    height: 16%;
+    width: 25%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
