--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,6 @@ main .overview-hero div{
 
 .stories h2,a{
     color: var(--navLink-color-hover);
-    margin-bottom: 40px;
 }
 
 .stories img{
@@ -248,4 +247,52 @@ main .overview-hero div{
 
 .newsletter{
     margin-top: 90px;
+    height: 41.5vh;
+    background-color: var(--bg-color);
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: white;
+}
+
+.newsletter h3{
+    margin-bottom:25px;
+    margin-top: -25px;
+}
+.newsletter p{
+    text-align: left;
+    width: 50%;
+    margin: 0 auto 20px auto;
+}
+
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+input{
+    padding: 15px;
+    border: none;
+    border-radius: 5px;
+    width: 320px;
+    
+}
+::placeholder{
+    color: rgba(107,114,128,0.5);
+    font-weight: bold;
+}
+
+.newsletter .btn{
+    color: white;
+    background-color: var(--navLink-color-hover);
+    border: none;
+    border-radius: 5px;
+    padding: 15px;
+    width: 160px;
+}
+.newsletter .btn:hover{
+    cursor: pointer;
+    background-color: #4754cc;
 }
