Updated footer name, added styles

--- a/styles.css
+++ b/styles.css
@@ -296,3 +296,11 @@ input{
     cursor: pointer;
     background-color: #4754cc;
 }
+
+footer{
+    height: 10.375vh;
+    background-color: var(--testing-bg);
+    display: flex;
+    align-items: center;
+    color: white;
+}
