--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,10 @@ main .overview-hero div{
 .stories h2,a{
     color: var(--navLink-color-hover);
 }
+.stories h2{
+    color: var(--navLink-color-hover);
+    margin-bottom: 40px;
+}
 
 .stories img{
     width: 200px;
