--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,7 @@
     box-sizing: border-box;
 }
 
-html{
-    background-color: white;
-    
-}
+
 body {
     margin: 0;
     width: 100%;
@@ -40,6 +37,7 @@ body {
 
 
 header .container {
+    background-color: white;
     width: 100%;
     height: 10vh;
     display: flex;
@@ -65,6 +63,9 @@ ul li a{
     font-size: 1.125rem;
     text-decoration: none;
     color: var(--navLink-color);
+}
+ul li a:hover{
+    color: var(--navLink-color-hover);
 }
 
 .overview-hero{
@@ -158,6 +159,7 @@ main .overview-hero div{
 }
 
 .card-body h3{
+    font-size: 21px;
     color: var(--heading-color);
 }
 .cards .card .card-body {
